<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PropertyHistoryFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/STT"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/STT"

                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="@dimen/Provider"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:text="@string/Provider"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="bold"></TextView>

                <TextView

                    android:layout_width="@dimen/Receiver"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:text="@string/Receiver"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="@dimen/Property"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/Property"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="bold"></TextView>

                <TextView

                    android:layout_width="@dimen/ProvidingDate"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/ProvidingDate"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="@dimen/Type"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/Type"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="bold"></TextView>
                <TextView
                    android:id="@+id/columnAction"
                    android:visibility="gone"
                    android:layout_width="@dimen/Action"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/Action"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerView"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>

</FrameLayout>