<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:weightSum="10"
    android:layout_height="wrap_content">
    <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:id="@+id/txt_index"
        android:textAlignment="center"
        android:text="STT"></TextView>
    <TextView
        android:layout_gravity="center_vertical"
        android:textAlignment="center"
        android:layout_weight="3"
        android:id="@+id/txt_name"
        android:layout_marginLeft="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Name"></TextView>
    <TextView
        android:layout_gravity="center_vertical"
        android:textAlignment="center"
        android:layout_weight="3"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/txt_avar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_status"
        android:text="@string/Status"></TextView>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:textSize="@dimen/miniText"
            android:text="@string/REMIND"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>
</LinearLayout>