<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaveFragment">
    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/relative_main"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/btn_add"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botron"
                >
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@string/ADD_REQUEST'></TextView>
            </LinearLayout>
        </RelativeLayout>
        <AutoCompleteTextView
            android:cursorVisible="false"
            android:focusable="false"
            android:layout_below="@id/top"
            android:drawableRight="@drawable/down"
            android:id="@+id/AutoCompleteTextViewSelectStatus"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="textStart"
            android:textColorHint="@color/hintColorGray"
            android:hint="Select Status"
            android:textSize="@dimen/miniText"
            android:layout_width="match_parent"
            android:background="@drawable/custom_edit_text_blue"
            android:layout_height="50dp"></AutoCompleteTextView>
        <HorizontalScrollView
            android:layout_below="@id/AutoCompleteTextViewSelectStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/STT"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/STT"

                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/nomarlText"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:layout_width="@dimen/Provider"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="4"
                        android:text="@string/Requester"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/nomarlText"
                        android:textStyle="bold"></TextView>





                    <TextView

                        android:layout_width="@dimen/ProvidingDate"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/Type"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/nomarlText"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:layout_width="@dimen/Type"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/Status"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/nomarlText"
                        android:textStyle="bold"></TextView>
                    <TextView
                        android:id="@+id/columnAction"
                        android:visibility="gone"
                        android:layout_width="@dimen/Action"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/Action"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/nomarlText"
                        android:textStyle="bold"></TextView>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerView"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>


</FrameLayout>