<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerformanceFragment">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginRight="20dp"
            android:weightSum="10"
            android:layout_toLeftOf="@id/btn_end"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/START_DAY"
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"></TextView>
                <View
                    android:background="@color/gray_mid"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"></View>
                <TextView
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/END_DAY"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"></TextView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:id="@+id/txt_start_day"
                    android:text="2023-03-02"
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"></TextView>
                <View
                    android:background="@color/gray_mid"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"></View>
                <TextView
                    android:textSize="@dimen/nomarlText"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:id="@+id/txt_end_day"
                    android:textAlignment="center"
                    android:text="2023-03-02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"></TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/btn_end"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/botron"
            >
            <TextView
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/END_PERFORMANCE"></TextView>
        </LinearLayout>
    </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10"
            >
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/nomarlText"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/txt_index"
                android:textAlignment="center"
                android:text="STT"></TextView>
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/nomarlText"
                android:textAlignment="center"
                android:layout_weight="3"
                android:id="@+id/txt_name"
                android:layout_marginLeft="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Name"></TextView>
            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/nomarlText"
                android:textAlignment="center"
                android:layout_weight="3"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/txt_avar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_departmentName"
                android:text="@string/Status"></TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:textAlignment="center"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Action"></TextView>
            </LinearLayout>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rcv_staff"
            ></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</FrameLayout>